clusters/production/istio/istio-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portal
  labels:
    istio-injection: enabled
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: portal-mtls
  namespace: portal
spec:
  mtls:
    mode: STRICT
---
