clusters/production/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway-portal
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
        - "pki.hm.edu"
        - "domain.api.hm.edu"
        - "pki.api.hm.edu"
        - "eab.api.hm.edu"
        - "acme.hm.edu"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: pki-cert
      hosts:
        - "pki.hm.edu"
        - "domain.api.hm.edu"
        - "pki.api.hm.edu"
        - "acme.hm.edu"
        - "eab.api.hm.edu"
    - port:
        number: 80
        name: http-bamberg
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
        - "pki-service.uni-bamberg.de"
        - "eab.pki-service.uni-bamberg.de"
        - "domains.pki-service.uni-bamberg.de"
        - "certs.pki-service.uni-bamberg.de"
        - "acme.pki-service.uni-bamberg.de"
    - port:
        number: 443
        name: https-bamberg
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: pki-cert-bamberg
      hosts:
        - "pki-service.uni-bamberg.de"
        - "eab.pki-service.uni-bamberg.de"
        - "domains.pki-service.uni-bamberg.de"
        - "certs.pki-service.uni-bamberg.de"
        - "acme.pki-service.uni-bamberg.de"
    - port:
        number: 80
        name: http-hof
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
        - "portal.pki.hof-university.de"
        - "eab.pki.hof-university.de"
        - "domains.pki.hof-university.de"
        - "rest.pki.hof-university.de"
        - "acme.pki.hof-university.de"
    - port:
        number: 443
        name: https-hof
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: pki-hof-cert
      hosts:
        - "portal.pki.hof-university.de"
        - "eab.pki.hof-university.de"
        - "domains.pki.hof-university.de"
        - "rest.pki.hof-university.de"
        - "acme.pki.hof-university.de"
    - port:
        number: 80
        name: http-stats
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
        - "stats.it.hm.edu"
    - port:
        number: 443
        name: https-stats
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: stat-cert
      hosts:
        - "stats.it.hm.edu"
    - port:
        number: 80
        name: http-net
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
        - "net.api.hm.edu"
    - port:
        number: 443
        name: https-net
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: tailscale-cert
      hosts:
        - "net.api.hm.edu"
    - port:
        number: 80
        name: http-sso-test
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
        - "sso-test.it.hm.edu"
    - port:
        number: 443
        name: https-sso-test
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: sso-test-cert
      hosts:
        - "sso-test.it.hm.edu"
    - port:
        number: 80
        name: http-sso-test-hm
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
        - "sso-test.hm.edu"
    - port:
        number: 443
        name: https-sso-test-hm
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: sso-test-cert-hm
      hosts:
        - "sso-test.hm.edu"
    - port:
        number: 80
        name: http-id-card-test
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
        - "id-card-test.it.hm.edu"
    - port:
        number: 443
        name: https-id-card-test
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: id-card-test-cert
      hosts:
        - "id-card-test.it.hm.edu"
    - port:
        number: 80
        name: http-idm-api
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
        - "idm-api.it.hm.edu"
    - port:
        number: 443
        name: https-idm-api
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: idm-api-cert
      hosts:
        - "idm-api.it.hm.edu"
    - port:
        number: 80
        name: http-id-card
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
        - "id-card.it.hm.edu"
    - port:
        number: 443
        name: https-id-card
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: id-card-cert
      hosts:
        - "id-card.it.hm.edu"
    - port:
        number: 80
        name: http-sso
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
        - "sso.it.hm.edu"
    - port:
        number: 443
        name: https-sso
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: sso-cert
      hosts:
        - "sso.it.hm.edu"
    - port:
        number: 80
        name: http-sso-hm
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
        - "sso.hm.edu"
    - port:
        number: 443
        name: https-sso-hm
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: sso-cert-hm
      hosts:
        - "sso.hm.edu"
