clusters/production/istio/istio-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: pki-service-mtls
  namespace: portal
spec:
  host: pki-service.portal.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: domain-rest-interface-mtls
  namespace: portal
spec:
  host: domain-rest-interface.portal.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: eab-rest-interface-mtls
  namespace: portal
spec:
  host: eab-rest-interface.portal.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: certificates-mtls
  namespace: portal
spec:
  host: certificates.portal.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: tailscale-mtls
  namespace: network
spec:
  host: tailscale-webhook-service.network.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
