clusters/production/istio/istio-services.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: pki
  namespace: portal
spec:
  hosts:
    - pki.api.hm.edu
  gateways:
    - istio-ingress/gateway-portal
  http:
    - match:
        - scheme:
            exact: http
      redirect:
        scheme: https
    - route:
        - destination:
            host: pki-rest-interface
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: portal
spec:
  hosts:
    - pki.hm.edu
  gateways:
    - istio-ingress/gateway-portal
  http:
    - match:
        - scheme:
            exact: http
      redirect:
        scheme: https
    - route:
        - destination:
            host: frontend
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: domain
  namespace: portal
spec:
  hosts:
    - domain.api.hm.edu
  gateways:
    - istio-ingress/gateway-portal
  http:
    - match:
        - scheme:
            exact: http
      redirect:
        scheme: https
    - route:
        - destination:
            host: domain-rest-interface
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: eab
  namespace: portal
spec:
  hosts:
    - eab.api.hm.edu
  gateways:
    - istio-ingress/gateway-portal
  http:
    - match:
        - scheme:
            exact: http
      redirect:
        scheme: https
    - route:
        - destination:
            host: eab-rest-interface
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: acme
  namespace: portal
spec:
  hosts:
    - acme.hm.edu
  gateways:
    - istio-ingress/gateway-portal
  http:
    - match:
        - scheme:
            exact: http
      redirect:
        scheme: https
    - route:
        - destination:
            host: certificates
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: stats
  namespace: default
spec:
  hosts:
    - stats.it.hm.edu
  gateways:
    - istio-ingress/gateway-portal
  http:
    - match:
        - scheme:
            exact: http
      redirect:
        scheme: https
    - match:
        - uri:
            prefix: /api/v1/receive
      route:
        - destination:
            host: thanos-receive.monitoring.svc.cluster.local
            port:
              number: 19291
    - route:
        - destination:
            host: grafana
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: grafana
  namespace: default
spec:
  host: grafana.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          # set a new session cookie with istio 
          name: GRAFANA_CONSISTENT_HASH
          path: /
          ttl: 480m
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tailscale
  namespace: network
spec:
  hosts:
    - net.api.hm.edu
  gateways:
    - istio-ingress/gateway-portal
  http:
    - match:
        - scheme:
            exact: http
      redirect:
        scheme: https
    - route:
        - destination:
            host: tailscale-webhook-service
            port:
              number: 80
